# twilight-bark

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  build_errors.txt  build_errors_final.txt  config.yaml.example
.claude/: settings.json  settings.local.json
adapters/filesystem/: Cargo.toml
adapters/filesystem/src/: lib.rs
adapters/obsidian/: Cargo.toml
adapters/obsidian/src/: lib.rs
config/: daemon-client.toml  daemon-e2e-test.toml  daemon-hub.toml  twilight-net.yaml
crates/twilight-bus/: Cargo.toml
crates/twilight-bus/src/: lib.rs
crates/twilight-cli/: Cargo.toml
crates/twilight-cli/src/: main.rs
crates/twilight-core/: Cargo.toml
crates/twilight-core/src/: lib.rs
crates/twilight-daemon/: Cargo.toml
crates/twilight-daemon/src/: config.rs  daemon.rs  ipc.rs  main.rs  process.rs
crates/twilight-eventlog/: Cargo.toml
crates/twilight-eventlog/src/: lib.rs
crates/twilight-management/: Cargo.toml
crates/twilight-mcp-server/: Cargo.toml
crates/twilight-mcp-server/src/: lib.rs  main.rs
crates/twilight-proto/: Cargo.toml  build.rs
crates/twilight-proto/proto/: twilight.proto
crates/twilight-proto/src/: lib.rs
crates/twilight-traffic-controller/: Cargo.toml
crates/twilight-traffic-controller/src/: lib.rs
crates/twilight-ziti/: Cargo.toml
crates/twilight-ziti/src/: lib.rs
docs/: a2a-protocol.md  app.js  index.html  mcp-integration.md  multi-provider-guide.md  onboarding-workflow.md  style.css
scripts/: build-console.sh  install-service.sh  phase-test.sh  provision-fabric.sh  setup-ziti-infra.sh
scripts/templates/: twilight-daemon.service
twilight-console/: package-lock.json  package.json
twilight-console/src/: index.html  main.js  mock-tauri.js  styles.css
twilight-console/src-tauri/: Cargo.toml  tauri.conf.json
twilight-console/src-tauri/src/: lib.rs  main.rs
