[package]
name = "obsidian-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-proto = { path = "../../crates/twilight-proto" }
twilight-core = { path = "../../crates/twilight-core" }
twilight-bus = { path = "../../crates/twilight-bus" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
walkdir = "2"
gray_matter = "0.2"
