[package]
name = "twilight-bus"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-proto = { path = "../twilight-proto" }
zenoh = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
