[package]
name = "twilight-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-proto = { path = "../twilight-proto" }
twilight-core = { path = "../twilight-core" }
twilight-bus = { path = "../twilight-bus" }
twilight-ziti = { path = "../twilight-ziti" }
twilight-traffic-controller = { path = "../twilight-traffic-controller" }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
log = { workspace = true }
env_logger = { workspace = true }
