[package]
name = "twilight-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "twilight-mcp-server"
path = "src/main.rs"

[dependencies]
twilight-proto = { path = "../twilight-proto" }
twilight-core = { path = "../twilight-core" }
twilight-bus = { path = "../twilight-bus" }
twilight-traffic-controller = { path = "../twilight-traffic-controller" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
