[package]
name = "twilight-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "twilight-mcp-server"
path = "src/main.rs"

[dependencies]
twilight-core = { path = "../twilight-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rmcp = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tower = "0.5"
